# pokedex

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
project/: pyproject.toml
project/pokemon/: api.py  models.py  serializers.py  tests.py  urls.py
project/pokemon/tests/: tests.py  utils.py
project/pokemon/tests/fixtures/: http_TestPokemonAPI_test_get_pokemon_information_by_name.yaml  http_TestPokemonAPI_test_get_pokemon_information_by_name_with_many_pokemon_names.yaml  http_TestPokemonTranslatedAPI_test_get_pokemon_information_by_name_with_translation.yaml  http_TestPokemonTranslatedAPI_test_get_translated_pokemon_does_shakespeare_translations_correctly.yaml  http_TestPokemonTranslatedAPI_test_get_translated_pokemon_does_yoda_translations_correctly.yaml
project/project/: settings.py  urls.py
